Completed facts section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
         <div id = 'nav_bar_navigation'>
             <ul>
-                <a> <li> Home </li> </a>
-                <a> <li> About </li> </a>
-                <a> <li> Facts </li> </a>
-                <a> <li> Contact  </li> </a>
+                <a href = '#nav_bar'> <li> Home </li> </a>
+                <a href = '#about'> <li> About </li> </a>
+                <a href = '#facts'> <li> Facts </li> </a>
+                <a href = '#home'> <li> Contact  </li> </a>
             </ul>
             <div id = 'nav_bar_navigation_search'>
                 <input type = 'text'> 
@@ -57,6 +57,8 @@
                     such as location , population , economy etc. of all the countries present in our database. All the details and 
                     information are presented briefly.
                 </p>
+
+                <a href="https://www.google.com" target = '_blank'> <button> VISIT OUR PATREON SITE </button> </a>
             </div>
 
             <div id = 'about_2'>
@@ -65,10 +67,10 @@
 
                 <ul id = 'about_2_nav'>
 
-                    <a> <li> <i class="fa-solid fa-earth-americas"></i> WICKIPEDIA </li></a>
-                    <a> <li> <i class="fa-solid fa-earth-americas"></i> DID YOU KNOW </li></a>
-                    <a> <li> <i class="fa-solid fa-earth-americas"></i> YOUTUBE </li></a>
-                    <a> <li> <i class="fa-solid fa-earth-americas"></i> ENCYCLOPEDIA </li></a>
+                    <a href = 'https://www.wikipedia.com' target = '_blank'> <li> <i class="fa-solid fa-earth-americas"></i> WICKIPEDIA </li></a>
+                    <a href = 'https://www.did-you-knows.com' target = '_blank'> <li> <i class="fa-solid fa-earth-americas"></i> DID YOU KNOW </li></a>
+                    <a href = 'https://www.youtube.com' target = '_blank'> <li> <i class="fa-solid fa-earth-americas"></i> YOUTUBE </li></a>
+                    <a href = 'https://www.encyclopedia.com' target = '_blank'> <li> <i class="fa-solid fa-earth-americas"></i> ENCYCLOPEDIA </li></a>
 
                 </ul>
 
@@ -77,6 +79,39 @@
         </div>
 
         <div id = 'facts'>
+
+            <p> Earth covers almost 70% of water. </p> 
+            <p>The fastest gust of wind ever recorded on Earth was 253 miles per hour. </p> 
+            <p> The best place in the world to see rainbows is in Hawaii. </p>
+            <p> There are fossilized plants in Greenland under 1.4 km of ice. </p>
+            <p> Whale songs can be used to map out the ocean floor. </p>
+            <p> New creatures have been found in deep-sea volcanoes.</p>
+            <p> Mount Everest is bigger now than the last time it was measured. </p>
+            <p> Climate change is causing flowers to change color. </p>
+            <p> Dentistry is the oldest profession in the world.</p>
+            <p> North Korea and Cuba are the only places you can't buy Coca-Cola.</p>
+            <p> The entire world's population could fit inside Los Angeles. </p>
+            <p> More people visit France than any other country. </p>
+            <p> The world's most densely populated island is the size of two soccer fields.</p>
+            <p> The Canary Islands are named after dogs, not birds.</p>
+            <p> Humans use only 1% of all available water</p>
+            <p> Americans throw away 25 trillion Styrofoam cups every year</p>
+            <p> Ants weigh more than humans </p>
+            <p> On average, one supermarket goes through 60 million paper bags each year.</p>
+            <p> Recycling one glass bottle saves enough energy to power a normal light bulb for about four hours. </p>
+            <p> Paper from trees can be recycled 6 times.  </p>
+            <p> Most frogs can jump up to 20 times their height. </p>
+            <p> You can boil and freeze liquids at the same time. </p>
+            <p> Black holes are not black. </p>
+            <p> The human femur is stronger than concrete. </p>
+            <p> The biggest volcano in the solar system is on Mars. </p>
+            <p> Metal can weld by itself when in space. </p>
+            <p> Baby elephants suck on their trunks as human babies suck on their thumbs. </p>
+            <p> There are no mosquitoes in Iceland. </p>
+            <p> Saturn would float on water. </p>
+            <p> Cats can safely drink seawater.</p>
+            <p> There are millions of billions of ants altogether. </p>
+            <p> Switzerland has 50 tree species.</p>
             
         </div>
 
