Finally completed website

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <a> Privacy Policy </a>
             <a> Help & Support </a>
             <a> Legal Notices </a>
+            &nbsp; &nbsp; <span> Image by <a id = 'special' href="https://www.freepik.com/free-vector/flat-design-mountain-landscape_20282349.htm#query=nature&position=20&from_view=keyword">Freepik</a> </span>
             <p> @Copyright 2022, Globepedia </p>
         </div>
     </footer>
